<resources>
    <string name="app_name">Secure Passwords</string>

    <string name="opcion_todas">Todas</string>
    <string name="opcion_ajustes">Ajustes</string>
    <string name="opcion_salir">Salir</string>

    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>

    <string name="agregarPassword">Agregar</string>

    <string name="txtTitulo">Titulo</string>
    <string name="txtNombreDelSitio">Nombre del Sitio:</string>
    <string name="txtNombreUsuario">Nombre del Usuario</string>
    <string name="txtPass">Contraseña</string>
    <string name="txtNotasAdicionales">Notas Adicionales (Opcional)</string>

    <string name="guardarPassword">Guardar</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>