<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OpcionesPassword.AgregarPassword"
    android:background="#ffffff">
    
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <!-- TITULO -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/txtTitulo"
                android:hint="@string/txtTitulo"
                android:maxLines="1"
                android:padding="15dp"
                android:inputType="textCapWords|text"
                android:textSize="25sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </EditText>

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Nombre del sitio -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/txtNombreSitio"
                android:hint="@string/txtNombreDelSitio"
                android:textSize="18sp"
                android:maxLines="1"
                android:inputType="textWebEmailAddress"
                android:padding="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </EditText>

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Nombre Usuario -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/txtNombreUsuario"
                android:hint="@string/txtNombreUsuario"
                android:textSize="18sp"
                android:maxLines="1"
                android:inputType="textCapWords|text"
                android:padding="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </EditText>

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Contraseña -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/txtPass"
                android:hint="@string/txtPass"
                android:textSize="18sp"
                android:maxLines="1"
                android:inputType="textPassword"
                android:padding="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </EditText>

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Notas adicionales -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/txtNotasAdicionales"
                android:hint="@string/txtNotasAdicionales"
                android:textSize="18sp"
                android:height="150dp"
                android:gravity="start"
                android:maxLines="1"
                android:inputType="textCapSentences|textMultiLine"
                android:padding="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </EditText>

        </com.google.android.material.textfield.TextInputLayout>



    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>